# mangaworld_downloader_api

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  robe.txt  synclist.json
src/: main.rs
src/data/: chapter.rs  manga.rs  mod.rs  volume.rs
src/lib/: downloader.rs
src/synclist/: mod.rs  synclist.rs
