[package]
name = "mangaworld_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", default-features = false, features = ["blocking","rustls-tls"] }
tokio = { version = "1.15.0", features = ["full"] }
scraper = "0.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.5"
warp = "0.3"

[profile.release]
lto = true
codegen-units = 1